<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
    <item android:id="@+id/Home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"/>
    <item android:id="@+id/My_Profile"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_my_profile"/>
    <item android:id="@+id/Favorite_Restaurants"
        android:title="@string/favorite_restaurants"
        android:icon="@drawable/ic_favorite"/>
    <item android:id="@+id/Order_History"
        android:title="@string/order_history"
        android:icon="@drawable/ic_order_history"/>
    <item android:id="@+id/Faqs"
        android:title="@string/faqs"
        android:icon="@drawable/ic_faqs"/>
    <item android:id="@+id/Logout"
        android:title="@string/log_out"
        android:icon="@drawable/ic_logout"/>
    </group>
</menu>